# ttk4130.github.io

./: .gitignore  .pre-commit-config.yaml  .rstcheck.cfg  LLM.md  README.md  deps.yml  pyproject.toml
.github/workflows/: sphinx_publish.yml
docs/: Makefile  animation.rst  assignment-1.rst  assignment.rst  bibliography.rst  conf.py  context-for-AI.rst  explicit-euler.rst  force-and-torque.rst  implicit-euler.rst  index.rst  installation.rst  introduction.rst  jupyter-notebook.rst  jupyter-notebooks.rst  make.bat  mass-and-inertia.rst  notation.rst  numerical-instability.rst  numerical-methods-for-odes.rst  project.rst  quaternions.rst  reference-frames.rst  references.rst  refs.bib  requirements.txt  rotations.rst  runge-kutta-methods.rst  simulation.rst  sympy-and-cas.rst  sympy-live.rst  vector-kinematics.rst  whats-next.rst
docs/_includes/: LLM.xml
docs/_includes/animation/: threejs_accel_moving_frame.html  threejs_bowl.html  threejs_empty.html  threejs_gimbal_lock.html  threejs_lorenz_attractor.html  threejs_racket.html  threejs_ref_frame_and_position.html  (+3 more)
docs/_static/: TennisRacket.glb  lagrange_bowl_simulation_data.json
docs/assignments/: assignment-0.rst  assignment-1.rst  assignment-10.rst  assignment-11.rst  assignment-2.rst  assignment-3.rst  assignment-4.rst  assignment-5.rst  assignment-6.rst  assignment-7.rst  assignment-8.rst  assignment-9.rst  index.rst  project.rst
docs/jupyterlite-deps/: environment.yml
docs/lecture-notes/: index.rst  week-0.rst
docs/project/: example-project.rst  example_project.rst  index.rst  project.rst
(+12 files in other folders)
