[project]
name = "ttk4130-docs"
version = "0.1.0"
requires-python = "==3.11.*"
dependencies = [
    "graphviz==0.11.*",
    "ipython==8.25.*",
    "matplotlib==3.8.*",
    "notebook==7.2.*",
    "numpy==1.26.*",
    "pythreejs==2.4.2",
    "plotly>=5.24.0",
    "pandas==2.2.*",
    "scipy==1.14.*",
    "sympy==1.12.*",
    "sphinx==8.1.3",
    "jupyter-sphinx>=0.4.0",
    "jupyterlite-pyodide-kernel==0.4.*",
    "jupyterlite-sphinx==0.16.*",
    "sphinx-book-theme",
    "sphinx-autobuild",
    "sphinx-material",
    "sphinx-togglebutton",
    "sphinx-design",
    "sphinxcontrib-bibtex",
    "nbsphinx",
]

[dependency-groups]
dev = [
    "pre-commit",
    "docstrfmt",
    "rstcheck[sphinx]",
    "doc8",
]

[tool.docstrfmt]
line_length = 100